# wordforge

./: .env  .env.example  .gitignore  .sqllsrc.json  Cargo.toml  README.md  build.rs  compose.yml  package-lock.json
api/: Cargo.toml
api/src/: account.rs  enums.rs  lib.rs  util.rs
api/src/activities/: accept.rs  add.rs  mod.rs
api/src/api/: chapter.rs  mod.rs  novel.rs
api/src/objects/: chapter.rs  mod.rs  novel.rs  novel_list.rs  person.rs
migrations/: 20230225131526_create_users.down.sql  20230225131526_create_users.up.sql  20230225131733_create_content.down.sql  20230225131733_create_content.up.sql  20230323085034_create_books.down.sql  20230323085034_create_books.up.sql  20230323085034_create_novels.down.sql  20230323085034_create_novels.up.sql
migrations/2023-02-20-094338_create_users/: down.sql  up.sql
server/: Cargo.toml
server/migrations/: 20230323085034_create_novels.down.sql
server/src/: instance.rs  main.rs
server/src/activities/: add.rs
server/src/api/: account.rs  mod.rs  novel.rs  user.rs
server/src/objects/: chapter.rs  novel.rs  person.rs
src/: instance.rs  main.rs  schema.patch  schema.rs  util.rs
src/activities/: add.rs
src/actors/: content.rs  mod.rs  person.rs
src/api/: account.rs  book.rs  mod.rs  novel.rs  user.rs
src/handlers/: account.rs
src/objects/: book.rs  chapter.rs  mod.rs  novel.rs  person.rs
ui/: .prettierrc  Cargo.toml  app.css  build.rs  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tailwind.config.ts  vite.config.ts
ui/src/: App.svelte  app.css  app.rs  auth.rs  fallback.rs  lib.rs  path.rs
ui/src/components/: auth.rs  basicinput.rs  chapter.rs  errorview.rs  listbox.rs  mod.rs  novel.rs  panel.rs  toggle.rs  tooltip.rs
ui/src/lib/: Register.svelte
ui/src/routes/: +page.svelte  Login.svelte  Register.svelte  SearchableListbox.svelte  auth.rs  enums.ts  mod.rs  novel.rs  validate.ts
ui/src/routes/about/: +page.svelte
ui/src/routes/create/: +page.svelte
ui/src/routes/dash/: +page.svelte
ui/src/routes/lib/: SearchableListbox.svelte  ToggleSwitch.svelte
ui/src/routes/novel/[uuid]/: +page.svelte
ui/src/routes/user/[username]/: +page.svelte
