[package]
name = "wordforge"
version = "0.1.0"
edition = "2021"

[dependencies]
activitypub_federation = { version = "0.4.0", default-features = false, features = [
  "actix-web",
] }
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = [
  "actix",
  "rand",
  "redis-actor-session",
] }
actix-web = { version = "4.3.0", features = [
  "openssl",
  "secure-cookies",
  "actix-tls",
] }
actix-web-grants = "3.0.1"
anyhow = "1.0.69"
argon2 = { version = "0.4.1", features = ["std"] }
async-trait = "0.1.64"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
openssl = { version = "0.10.45", features = ["v110"] }
rand_core = { version = "0.6.4", features = ["std"] }
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = [
  "all-types",
  "postgres",
  "runtime-actix-native-tls",
] }
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.0", features = [
  "fast-rng",
  "v4",
  "serde",
  "macro-diagnostics",
] }
validator = { version = "0.16.0", features = ["derive"] }
