[workspace]
members = ["server", "ui"]

[[workspace.metadata.leptos]]
name = "wordforge"
bin-package = "wordforge-server"
lib-package = "wordforge-ui"
site-root = "target/site"
style-file = "target/style.css"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
lib-features = ["hydrate"]
