[package]
name = "wordforge-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.2.5", default-features = false, features = ["serde"] }
leptos_meta = { version = "0.2.5", default-features = false }
leptos_router = "0.2.5"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tracing = { version = "0.1.37", features = ["log"] }
wasm-bindgen = "0.2.84"

[features]
default = ["hydrate"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]
