[package]
name = "wordforge-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
activitypub_federation = { git = "https://github.com/LemmyNet/activitypub-federation-rust", rev = "99cdbb5", version = "0.4.0", default-features = false, features = [
  "actix-web",
], optional = true }
actix-session = { version = "0.7.2", features = [
  "actix",
  "rand",
  "redis-actor-session",
], optional = true }
actix-web = { version = "4.3.0", features = [
  "openssl",
  "secure-cookies",
  "actix-tls",
], optional = true }
argon2 = { version = "0.4.1", features = ["std"], optional = true }
leptos = { version = "0.2.5", default-features = false, features = ["serde"] }
leptos_actix = { version = "0.2.5", optional = true }
leptos_meta = { version = "0.2.5", default-features = false }
leptos_router = "0.2.5"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = [
  "all-types",
  "postgres",
], optional = true }
tracing = { version = "0.1.37", features = ["log"] }
validator = { version = "0.16.0", features = ["derive"] }
wasm-bindgen = "0.2.84"

[features]
default = ["hydrate", "ssr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_actix",
  "dep:activitypub_federation",
  "dep:actix-session",
  "dep:actix-web",
  "dep:argon2",
  "dep:sqlx",
]
